--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,15 @@
-../strava/requirements.txt
+Babel==2.2.0
+Flask==0.10.1
+Flask-Login==0.3.2
+Flask-Table==0.2.9
+Jinja2==2.8
+MarkupSafe==0.23
+Werkzeug==0.11.4
+beautifulsoup4==4.4.1
+itsdangerous==0.24
+python-dateutil==2.5.0
+pytz==2015.7
+requests==2.9.1
+six==1.10.0
+stravalib==0.5.0
+units==0.6
