--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,30 @@
 Babel==2.2.0
+backports.shutil-get-terminal-size==1.0.0
+beautifulsoup4==4.4.1
+bs4==0.0.1
+decorator==4.0.10
 Flask==0.10.1
 Flask-Login==0.3.2
 Flask-Table==0.2.9
-Jinja2==2.8
-MarkupSafe==0.23
-Werkzeug==0.11.4
-beautifulsoup4==4.4.1
+ipython==4.2.0
+ipython-genutils==0.1.0
 itsdangerous==0.24
+Jinja2==2.8
+lxml==3.6.0
+MarkupSafe==0.23
+pexpect==4.2.0
+pickleshare==0.7.3
+pkg-resources==0.0.0
+prompt-toolkit==1.0.3
+ptyprocess==0.5.1
+Pygments==2.1.3
 python-dateutil==2.5.0
 pytz==2015.7
 requests==2.9.1
+simplegeneric==0.8.1
 six==1.10.0
 stravalib==0.5.0
+traitlets==4.2.2
 units==0.6
+wcwidth==0.1.7
+Werkzeug==0.11.4
